--- a/src/assets/css/light-bootstrap-dashboard-react.css
+++ b/src/assets/css/light-bootstrap-dashboard-react.css
@@ -1380,7 +1380,8 @@ body > .navbar-collapse[data-color="purple"]:after {
     width: calc(100% - $sidebar-width);
     right: 0;
     left: auto;
-    border-radius: 0; }
+    border-radius: 0;
+  }
 
 .navbar-nav > li > .dropdown-menu {
   border-radius: 10px;
