--- a/Documentation/css/light-bootstrap-dashboard.css
+++ b/Documentation/css/light-bootstrap-dashboard.css
@@ -1377,10 +1377,10 @@ body > .navbar-collapse[data-color="purple"]:after {
   .navbar .btn-simple {
     font-size: 16px; }
   .navbar.fixed {
-    width: calc(100% - $sidebar-width);
+    /* width: calc(100% - $sidebar-width); */
     right: 0;
     left: auto;
-    border-radius: 0; }
+    border-radius: 0;}
 
 .navbar-nav > li > .dropdown-menu {
   border-radius: 10px;
