--- a/src/login/css/styles.css
+++ b/src/login/css/styles.css
@@ -34,7 +34,7 @@
   margin: 0 auto;
 }
 
-.logo {
+.logo-login {
   position: absolute;
   font-size: 3em;
   transform: translateX(-50%) translateY(-100%);
